refactor: builder 추가